[package]
name = "rsrl-types"
version = "0.1.0"
authors = ["Wout Schellaert <wout.schellaert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

spaces = { git = "https://github.com/wschella/spaces.git", rev = "cf225df"}